<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_gravity="center"
    android:gravity="center|start"
   >

   <Switch
       android:id="@+id/switch_noti"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/notification"
       android:textSize="18sp"/>

    <TextView
        android:id="@+id/textBright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="18sp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        >
        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="18sp"/>


        <RadioButton
            android:id="@+id/arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textSize="18sp"/>
    </RadioGroup>


  <android.widget.Button
      android:id="@+id/btnSave"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/save_settings"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded_button_blue"
      android:textColor="@color/white"
/>



</LinearLayout>